# lec_1_odd_lib

./: .travis.yml  CMakeLists.txt  README.md  test.cpp
example/: example.cpp
include/: odd.hpp
ipc/: CMakeLists.txt
ipc/lib/utils/include/: utils.hpp
ipc/lib/utils/src/: utils.cpp
ipc/src/: mmap.cpp  shared.cpp  signals.cpp  unix.cpp
movable_function/: CMakeLists.txt  main.cpp
odd_lib/: CMakeLists.txt
odd_lib/example/: CMakeLists.txt
odd_lib/src/: odd.cpp
